--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,15 @@
 spring:
   application:
     name: oj-backend
-  config:
-    import:
-      - classpath:/database_config/database.properties
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${datasource.url}
-    username: ${datasource.username}
-    password: ${datasource.password}
+  profiles:
+    active: dev
   session:
     # 失效时间：1天
     timeout: 86400
-    store-type: redis
+    store-type: localhost
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-#  redis:
-#    port: 6379
-#    host: localhost
-#    database: 0
-
 server:
   port: 8080
   servlet:
@@ -32,14 +21,13 @@ server:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations:
     - classpath:/mapper/*.xml
   type-aliases-package: com.juzi.oj.model.entity
   global-config:
     db-config:
-      logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
-      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0) # 更新时非空判断非空
+      logic-delete-field: isDelete
+      logic-delete-value: 1
+      logic-not-delete-value: 0
       update-strategy: not_null
       where-strategy: not_null
