feat: add judge question (use factory, strategy, proxy)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,6 @@ mybatis-plus:
       logic-not-delete-value: 0
       update-strategy: not_null
       where-strategy: not_null
+
+codesandbox:
+  type: example
