--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   session:
     # 失效时间：1天
     timeout: 86400
-    store-type: localhost
+    store-type: redis
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -16,7 +16,7 @@ server:
     context-path: /api
     session:
       cookie:
-        domain: localhost
+        max-age: 2592000
 
 mybatis-plus:
   configuration:
