--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,14 +5,14 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${datasource.url}
-    username: ${datasource.username}
-    password: ${datasource.password}
+    username: codejuzi
+    password: 12345678
   redis:
     port: 6379
-    host: localhost
+    host: ${redis.dev.host}
     database: 0
   rabbitmq:
-    host: localhost
+    host: ${rabbitmq.dev.host}
     port: 5672
     username: guest
     password: guest
